# GoQuant

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  build_and_run.bat  index.html  install_deps.bat  install_mingw.bat  mingw.7z  run.bat  run_simple.bat  run_simple.py  script.js  setup.ps1  simple_CMakeLists.txt  simple_build.bat  simple_trade_sim.cpp  simple_trade_sim.py  styles.css  test.cpp  vcpkg.json
include/core/: FeeCalculator.h  OrderBookProcessor.h  WebSocketClient.h
include/models/: AlmgrenChriss.h  RegressionModels.h
include/ui/: MainWindow.h
include/utils/: PerformanceMonitor.h
project/: index.html
project/src/: App.tsx
project/src/components/: DepthChart.tsx  OrderBookVisualizer.tsx
project/src/components/ui/: Button.tsx  GlassCard.tsx  Input.tsx  MetricCard.tsx  Select.tsx  Slider.tsx  StatusIndicator.tsx
project/src/constants/: index.ts
project/src/hooks/: useTradeMetrics.ts  useWebSocket.ts
project/src/types/: index.ts
src/: main.cpp  simple_main.cpp
src/core/: FeeCalculator.cpp  OrderBookProcessor.cpp  WebSocketClient.cpp
src/models/: AlmgrenChriss.cpp  RegressionModels.cpp
src/ui/: MainWindow.cpp
src/utils/: PerformanceMonitor.cpp
